# dgit

./: .gitignore  main.py  pyproject.toml
dgit/: cli.py  data.py
