[project]
name = "dgit"
version = "0.1.0"
description = "Personal Git built in Python."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dgit = "dgit.cli:main"
